--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="#">
                 <span class="brand-name" id="brand-name">Pizza Order</span>
             </a>
@@ -53,7 +53,47 @@
     </nav>
     
     <main class="container mt-4">
-        <!-- Content goes here -->
+        <div id="pizzaCarousel" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#pizzaCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#pizzaCarousel" data-slide-to="1"></li>
+                <li data-target="#pizzaCarousel" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/pizza 1.jpg" class="d-block w-100" alt="Pizza 1">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Delicious Margherita Pizza</h5>
+                        <p>A classic delight with a fresh tomato and basil topping.</p>
+                        <div class="carousel-discount">20% Off</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/pizza 2.jpg" class="d-block w-100" alt="Pizza 2">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Spicy Pepperoni Pizza</h5>
+                        <p>Loaded with pepperoni and mozzarella cheese.</p>
+                        <div class="carousel-discount">15% Off</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/pizza 3.jpg" class="d-block w-100" alt="Pizza 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Veggie Supreme Pizza</h5>
+                        <p>A healthy mix of fresh vegetables and herbs.</p>
+                        <div class="carousel-discount">10% Off</div>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#pizzaCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#pizzaCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
     </main>
 
     <footer class="text-center py-4">
