--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta name="author" content="Brian Shifoko">
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Order the best pizza online from Pizza Order. Enjoy delicious Margherita, Pepperoni, and Veggie Supreme pizzas with amazing discounts. Fast delivery and fresh ingredients.">
+    <meta name="keywords" content="pizza, order pizza, online pizza order, pizza delivery, best pizza, Margherita pizza, Pepperoni pizza, Veggie pizza">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Pizza Order - Best Online Pizza Delivery">
+    <meta property="og:description" content="Order the best pizza online from Pizza Order. Enjoy delicious Margherita, Pepperoni, and Veggie Supreme pizzas with amazing discounts. Fast delivery and fresh ingredients.">
+    <meta property="og:image" content="URL_TO_YOUR_IMAGE">
+    <meta property="og:url" content="https://brian-pizza-ordering-website.netlify.app">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Pizza Order - Best Online Pizza Delivery">
+    <meta name="twitter:description" content="Order the best pizza online from Pizza Order. Enjoy delicious Margherita, Pepperoni, and Veggie Supreme pizzas with amazing discounts. Fast delivery and fresh ingredients.">
+    <meta name="twitter:image" content="URL_TO_YOUR_IMAGE">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -58,10 +71,13 @@
                 <li data-target="#pizzaCarousel" data-slide-to="0" class="active"></li>
                 <li data-target="#pizzaCarousel" data-slide-to="1"></li>
                 <li data-target="#pizzaCarousel" data-slide-to="2"></li>
+                <li data-target="#pizzaCarousel" data-slide-to="3"></li>
+                <li data-target="#pizzaCarousel" data-slide-to="4"></li>
+                <li data-target="#pizzaCarousel" data-slide-to="5"></li>
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/pizza 1.jpg" class="d-block w-100" alt="Pizza 1">
+                    <img src="images/pizza 2.jpg" class="d-block w-100" alt="Pizza 1">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Delicious Margherita Pizza</h5>
                         <p>A classic delight with a fresh tomato and basil topping.</p>
@@ -69,7 +85,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/pizza 2.jpg" class="d-block w-100" alt="Pizza 2">
+                    <img src="images/pizza 3.jpg" class="d-block w-100" alt="Pizza 2">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Spicy Pepperoni Pizza</h5>
                         <p>Loaded with pepperoni and mozzarella cheese.</p>
@@ -77,11 +93,35 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/pizza 3.jpg" class="d-block w-100" alt="Pizza 3">
+                    <img src="images/pizza 4.jpg" class="d-block w-100" alt="Pizza 3">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Veggie Supreme Pizza</h5>
                         <p>A healthy mix of fresh vegetables and herbs.</p>
                         <div class="carousel-discount">10% Off</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/pizza 5.jpg" class="d-block w-100" alt="Pizza 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Veggie Supreme Pizza</h5>
+                        <p>A healthy mix of fresh vegetables and herbs.</p>
+                        <div class="carousel-discount">37% Off</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/pizza 6.jpg" class="d-block w-100" alt="Pizza 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Veggie Supreme Pizza</h5>
+                        <p>A healthy mix of fresh vegetables and herbs.</p>
+                        <div class="carousel-discount">25% Off</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/pizza 7.jpg" class="d-block w-100" alt="Pizza 3">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Veggie Supreme Pizza</h5>
+                        <p>A healthy mix of fresh vegetables and herbs.</p>
+                        <div class="carousel-discount">17% Off</div>
                     </div>
                 </div>
             </div>
