--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/pizza 3.jpg" class="d-block w-100" alt="Pizza 2">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h5>Spicy Pepperoni Pizza</h5>
                         <p>Loaded with pepperoni and mozzarella cheese.</p>
                         <div class="carousel-discount">15% Off</div>
@@ -94,7 +94,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/pizza 4.jpg" class="d-block w-100" alt="Pizza 3">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h5>Veggie Supreme Pizza</h5>
                         <p>A healthy mix of fresh vegetables and herbs.</p>
                         <div class="carousel-discount">10% Off</div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/pizza 5.jpg" class="d-block w-100" alt="Pizza 3">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h5>Veggie Supreme Pizza</h5>
                         <p>A healthy mix of fresh vegetables and herbs.</p>
                         <div class="carousel-discount">37% Off</div>
@@ -110,7 +110,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/pizza 6.jpg" class="d-block w-100" alt="Pizza 3">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h5>Veggie Supreme Pizza</h5>
                         <p>A healthy mix of fresh vegetables and herbs.</p>
                         <div class="carousel-discount">25% Off</div>
@@ -118,7 +118,7 @@
                 </div>
                 <div class="carousel-item">
                     <img src="images/pizza 7.jpg" class="d-block w-100" alt="Pizza 3">
-                    <div class="carousel-caption d-none d-md-block">
+                    <div class="carousel-caption d-md-block">
                         <h5>Veggie Supreme Pizza</h5>
                         <p>A healthy mix of fresh vegetables and herbs.</p>
                         <div class="carousel-discount">17% Off</div>
