updated the discount card position and corrected a name on the html for pizza advert

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="images/pizza 2.jpg" class="d-block w-100" alt="Pizza 1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Delicious Margherita Pizza</h5>
+                    <div class="carousel-caption d-md-block">
+                        <h5>Margherita Pizza</h5>
                         <p>A classic delight with a fresh tomato and basil topping.</p>
                         <div class="carousel-discount">20% Off</div>
                     </div>
